# Projetos

./: .gitignore
AWS-Base/: .gitignore  readme.md
AWS-DataLake/: Pipeline_AWS.py  hello-s3.txt  pyproject.toml  readme.md
AzureBoard/: readme.md
ChatbotPython/: readme.md
Finance/: ProjetoFincances.pbix  readme.md
Finance/Extract/: Fundamentus.py  Yfinance.py
PipelinePython/: readme.md
PipelinePython/Documentos/pipeline_dados/data_processed/: dados_final_prod.csv
PipelinePython/Documentos/pipeline_dados/notebooks/: explore.ipynb
PipelinePython/Documentos/pipeline_dados/scripts/: fusao_mercado_1124.py  processamento_dados.py
Python-Estatistica/: analise_dados.py  readme.md
Spark/: readme.md  spark.ipynb
Streamlit/: Dashboard.py
StreamlitDash/: Dashboard.py  pyproject.toml
speech_Recognition/: app.py  pyproject.toml
