[tool.poetry]
name = "aws-datalake"
version = "0.1.0"
description = ""
authors = ["Roberta Ferreira Aguilar <roberta_rfa@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
notebook = "^7.2.2"
jupyter = "^1.1.1"
boto3 = "^1.35.64"
python-dotenv = "^1.0.1"
pyarrow = "^18.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
