[tool.poetry]
name = "streamlitdash"
version = "0.1.0"
description = ""
authors = ["Roberta Ferreira Aguilar <roberta.aguilar@kobel.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.40.1"
pandas = "^2.2.3"
requests = "^2.32.3"
plotly = "^5.24.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
