[tool.poetry]
name = "speech_recognition"
version = "0.1.0"
description = ""
authors = ["Roberta"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
speechrecognition = "^3.11.0"
pyaudio = "^0.2.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
